Post view completed

--- a/src/translations/default/en.json
+++ b/src/translations/default/en.json
@@ -5,5 +5,8 @@
   "accessibility_label_back": "Back",
   "accessibility_hint_navigate_back": "Navigates to the previous screen",
   "bottom_tab_post_view_title": "Post View",
-  "bottom_tab_card_view_title": "Card View"
+  "bottom_tab_card_view_title": "Card View",
+  "error_getting_location":"Error while fetching location",
+  "postview_latitude":"Latitude:",
+  "postview_longitude":"Longitude:"
 }
